Thu, 01 Nov 2007 15:29:00 +0100 <thp@perli.net>
Limit filename on FS-based sync to 50 characters

	* src/gpodder/libipodsync.py: Do not allow extremely long file names
	that could theoretically be generated by using data from RSS feeds;
	this is needed to make FAT-based drives work with files that would
	otherwise have file names that are too long

Wed, 31 Oct 2007 15:22:32 +0100 <thp@perli.net>
Escape RSS-provided strings in Pango markup

	* src/gpodder/gui.py: Escape strings in Pango markup
	* bin/gpodder: we're in development again, so "+svn"

Sun, 28 Oct 2007 16:27:14 +0100 <thp@perli.net>
gPodder 0.10.1 "Nukular, das Wort heißt Nukular" released

	* bin/gpodder: gPodder 0.10.1 released :)
	* doc/man/gpodder.1: gPodder 0.10.1 released :)
	* README: gPodder 0.10.1 released :)
	* data/messages.pot: Refreshed template from source files
	* data/po/de.po: Updated German translation for the 0.10.1 release
	* data/po/*.po: Refreshed translation files from template

Sun, 28 Oct 2007 15:25:56 +0100 <thp@perli.net>
Add "Save episode to file" handling to episode list context menu

	* data/gpodder.glade: Use a stock "Save As" button for the "Copy
	episode to file" button
	* src/gpodder/gui.py: Add new show_copy_dialog() method to GladeWidget
	that shows a copy dialog where a user can copy a file to a selected
	destination (this is used for "Save episode to file"); use
	show_copy_dialog in "Save As" in gPodderEpisode; add "Save episode to
	folder" menu item in episode list context menu and use
	show_copy_dialog to carry out the user interaction

Sun, 28 Oct 2007 13:30:40 +0100 <thp@perli.net>
Allow "https://" URLs for episode URLs, as we can handle these, too

	* src/gpodder/util.py: Allow "https://" as a valid URL scheme, as we
	can handle https URLs, thanks to Aravind Seshadri
	<aravind@aravind.name> who initially reported this bug

Thu, 25 Oct 2007 14:00:01 +0200 <thp@perli.net>
Sync videos to the "Video Podcasts" playlist instead of the "Video" menu
